tests/parsing-test/test_out/let-binding-loop-parse-out.txt
error: expected Ident | '\' | 'return' | Int | Char | 'const' | 'match' | 'if' but got 'let'
 --> let-binding-loop\root.ctl:1:69
  |
1 | struct A { a : uint ; b : uint ; } ; #[entry] ; fn main() -> uint { let \ { mut a, b } = A \ { a : 0 ; b : 3 } ; a = a + b ; a - 3 } ;
  |                                                                     ^^^ token located here
  |
  = info: list -> item -> function definition -> function body -> list -> expr -> unit expr

